--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.18.0",
+    "gibb": "^1.0.3",
     "leo-profanity": "^1.8.0",
     "mongoose": "^8.19.2",
     "nanoid": "^5.1.6",
