Update configuration for Prisma and Vercel integration
- Enhanced Next.js configuration to include output file tracing for Prisma Client.
- Added a new script in package.json for generating Prisma Client.
- Introduced a new Vercel configuration file to define build and install commands.
- Updated Prisma schema to support additional binary targets for improved compatibility.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "prisma generate && next build",
     "start": "next start",
     "lint": "eslint",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "prisma:generate": "prisma generate"
   },
   "dependencies": {
     "@prisma/client": "^6.18.0",
